Settings UI: solve Masterbar hamburger overlap with logo (#7418)
* Masterbar: add a CSS class to admin body tag to identify when it's active

* Settings UI: when Masterbar is active, move Jetpack logo to avoid overlapping.

--- a/_inc/client/components/masthead/style.scss
+++ b/_inc/client/components/masthead/style.scss
@@ -4,8 +4,12 @@
 	box-shadow: 0 1px 0 transparentize( lighten( $gray, 20% ), .5 ),
 		0 1px 2px lighten( $gray, 30% );
 
-	@media (max-width: rem( 720px ) ) {
-		padding: 0 rem( 20px );
+	@media (max-width: rem( 782px ) ) {
+		padding: 0 rem( 24px );
+
+		.jetpack-masterbar & {
+			padding-left: rem( 64px );
+		}
 	}
 }
 
